# limbo

./: CHANGELOG.md
core/: Cargo.toml  types.rs
issue-30-lazy-parsing/: .gitignore  CLEANUP_PROPOSAL.md  CLEANUP_RATIONALE.md  CONSOLIDATED_SUMMARY.md  FINAL_REVIEW_AND_SOLUTION.md  IMPLEMENTATION_GUIDE.md  LESSONS_LEARNED.md  PRESERVATION_PLAN.md  README.md  README_NEW.md  action-plan.md  actionable-optimizations.md  analysis.md  baseline-results.md  benchmark-alignment-summary.md  benchmark-comparison-report.md  benchmarks.md  bitmap-optimization-results.md  bitmap-optimization-summary.md  bug-fixes-summary.md  cleanup.sh  critical-insights.md  executive-summary.md  historical-benchmarks.md  implementation-plan.md  implementation-summary.md  integration-strategy.md  lazy-parsing-results.md  next-steps.md  optimization-analysis-final.md  optimization-recommendations.md  performance-analysis-and-recommendations.md  performance-bug-analysis.md  phase1-summary.md  quick-win-implementation.md  sparse-record-analysis.md  sqlite-optimization-analysis.md  technical-details.md
issue-30-lazy-parsing/benchmarks/: Cargo.toml  README.md  SUMMARY.md  run_benchmarks.sh
issue-30-lazy-parsing/benchmarks/benches/: lazy_parsing.rs
issue-30-lazy-record-parsing/: ANALYSIS_TIMELINE.md  BASELINE_PERFORMANCE_ANALYSIS.md  CRITICAL_FIXES_REQUIRED.md  CURRENT_STATUS.md  DOCUMENTATION_UPDATE_SUMMARY.md  FINAL_DOCUMENTATION.md  FINAL_RECOMMENDATIONS.md  IMPLEMENTATION_ATTEMPT_RESULTS.md  IMPLEMENTATION_CHECKLIST.md  KEY_INSIGHTS_SUMMARY.md  PERFORMANCE_ANALYSIS_MASTER_INDEX.md  README.md  (+5 more)
(+35 files in other folders)
