[package]
name = "lazy-parsing-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
limbo_core = { path = "../../core" }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
rusqlite = { version = "0.32.1", features = ["bundled"] }

[[bench]]
name = "lazy_parsing"
harness = false

[profile.release]
debug = true

[workspace]